# rust-backend-examples

./: README.md
auth-service/: .env  Cargo.toml
auth-service/migrations/: 20240814064110_create-tables.sql
auth-service/src/: main.rs
auth-service/src/config/: crypto.rs  mod.rs
auth-service/src/db/: user.rs
auth-service/src/handlers/: mod.rs
auth-service/src/models/: user.rs
clean-arch/: Cargo.toml  diesel.toml  docker-compose.yml
clean-arch/migrations/2024-09-17-162513_create_user/: up.sql
jwt-auth/: Cargo.toml
jwt-auth/src/: controller.rs  main.rs  model.rs
no_cargo/: a.out  box_around_trait.rs  box_example.rs  string_examples.rs  test.rs  traits.rs
rust-axum-intro/: Cargo.toml  Readme.md
rust-axum-intro/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
rust-axum-intro/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
rust-axum-intro/tests/: quick_dev.rs
rust-tutorial/: Cargo.toml
rust-tutorial/src/: collections_vector.rs  linked_list.rs  main.rs  message_passing.rs  shared_state_concurrency.rs  simple_threading.rs
rust-web-app/: Cargo.toml  README.md  rustfmt.toml
rust-web-app/.cargo/: cargo.toml  config.toml
rust-web-app/examples/: quick_dev.rs
rust-web-app/sql/dev_initial/: 01-create-schema.sql
rust-web-app/src/: config.rs  error.rs  main.rs
rust-web-app/src/_dev_utils/: mod.rs
rust-web-app/src/ctx/: error.rs  mod.rs
rust-web-app/src/log/: mod.rs
rust-web-app/src/model/: base.rs  error.rs  mod.rs  task.rs
rust-web-app/src/model/store/: error.rs  mod.rs
rust-web-app/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
rust-web-app/web-folder/: index.html
weather_monitor/: app.py  users.json
weather_monitor/static/: styles.css
weather_monitor/templates/: base.html  home.html  login.html
