[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
# -- Json
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_with = "3.9.0"
# -- Web
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
# -- Data
sqlx = { version = "0.8.0", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
# -- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# -- Others
uuid = {version = "1.10.0", features = ["v4", "fast-rng"] }
lazy-regex = "3.2.0"
async-trait = "0.1.81"
strum_macros = "0.26.4"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.10"
